--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-particles": "^2.12.2",
     "react-router-dom": "^6.23.1",
-    "react-typed": "^2.0.12"
+    "react-tsparticles": "^2.12.2",
+    "react-typed": "^2.0.12",
+    "tsparticles": "^3.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
