--- a/package.json
+++ b/package.json
@@ -10,18 +10,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@cascadia-code/scroll-to-hash-element": "^2.0.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-particles": "^2.12.2",
     "react-router-dom": "^6.23.1",
+    "react-router-hash-link": "^2.4.3",
+    "react-slick": "^0.30.2",
     "react-tsparticles": "^2.12.2",
     "react-typed": "^2.0.12",
+    "slick-carousel": "^1.8.1",
     "tsparticles": "^3.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-router-hash-link": "^2.4.9",
+    "@types/react-slick": "^0.23.13",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
     "@vitejs/plugin-react": "^4.3.1",
