--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "portfolio_website",
+  "homepage": "https://dami-18.github.io/my_website",
+  "name": "my_website",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
@@ -13,6 +16,7 @@
   "dependencies": {
     "@cascadia-code/scroll-to-hash-element": "^2.0.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "gh-pages": "^6.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-particles": "^2.12.2",
