--- a/package.json
+++ b/package.json
@@ -19,14 +19,12 @@
     "gh-pages": "^6.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-particles": "^2.12.2",
     "react-router-dom": "^6.23.1",
     "react-router-hash-link": "^2.4.3",
     "react-slick": "^0.30.2",
     "react-tsparticles": "^2.12.2",
     "react-typed": "^2.0.12",
-    "slick-carousel": "^1.8.1",
-    "tsparticles": "^3.4.0"
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
