--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://dami-18.github.io/my_website",
+  "homepage": "https://dami-18.github.io/my_website/",
   "name": "my_website",
   "private": true,
   "version": "0.0.0",
